--- a/index.html
+++ b/index.html
@@ -4,13 +4,90 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Whiskey Drop | Taste a new whiskey every month</title>
+    <meta name="viewport" content="width=device-width, initial scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </head>
+
 <body>
-    <h1>This is a test</h1>
-    <p>Hello, World!</p>
-    <button>Click me!</button>
+    <article class="container">
+        <!-- callout-->
+        <div class="row">
+            <div class="col-12">
+                <section class="callout">
+                    <h1>The finest whiskeys delivered to your doorstep.</h1>
+                    <p class="lead">Sign up today to start receiving the world's best whiskeys every month. 
+                    <s>£19.99</s> <strong><mark>First one is free!</mark></strong></p>
+                    <button class="btn btn-success btn-lg">Sign up!</button>
+                    <p class="text-muted"><small>You must be over 18 to sign up to our service. Please drink responsibly.</small></p>
+                </section>
+            </div>
+        </div>
+        <!-- /.callout-->
+        <hr>
+
+        <!-- quotes-->
+            <section class="quotes">
+                <div class="row">
+                    <div class="col-12">
+                        <h2 class="text-uppercase">Quotes</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-md-6">
+                        <blockquote class="blockquote">
+                            <p>I've been introduced to more than 10 great international whiskeys I never knew about</p>
+                            <p>- Jane Doe</p>
+                        </blockquote>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <blockquote class="blockquote">
+                            <p>I haven't been sober for months!</p>
+                            <p>- Jane Doe</p>
+                        </blockquote>
+                    </div>
+                </div>
+            </section>
+        </div>
+        <hr>
+
+        <section class="features">
+            <div class="row">
+                <div class="col-12"></div>
+                    <h2 class="text-uppercase">Features</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="feature">
+                        <h3>Feature 1</h3>
+                        <p>Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Donec sollicitudin molestie malesuada.
+                        </p>
+                        <p><a class="btn btn-light btn-sm">Read More</a></p>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="feature">
+                        <h3>Feature 2</h3>
+                        <p>Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Donec sollicitudin molestie malesuada. 
+                        </p>
+                        <p><a class="btn btn-light btn-sm">Read More</a></p>
+                    </div>
+                </div>
+                <div class="col-12 d-md-none d-lg-block col-lg-4">
+                    <div class="feature">
+                        <h3>Feature 3</h3>
+                        <p>Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Donec sollicitudin molestie malesuada.
+                        </p>
+                        <p><a class="btn btn-light btn-sm">Read More</a></p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!--quotes-->
+    </article>
+
 </body>
 </html> 
