--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
 		integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous">
 	</script>
+	<script src="https://kit.fontawesome.com/98a8178e03.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -20,7 +21,7 @@
 		<ul class="navbar-nav mr-auto">
 			<li class="active nav-item mr-2"><a class="nav-link" href="/">Home</a></li>
 			<li class="nav-item mr-2"><a class="nav-link" href="/about">About</a></li>
-            <li class="nav-item mr-2 d-block d-sm-none"><a class="nav-link" href="/login">Sign In / Sign Up</a></li>
+			<li class="nav-item mr-2 d-block d-sm-none"><a class="nav-link" href="/login">Sign In / Sign Up</a></li>
 		</ul>
 		<div class="d-none d-md-block">
 			<p class="navbar-text my-auto mr-2"><i>Great whiskey delivered to your door!</i></p>
@@ -28,6 +29,14 @@
 		</div>
 	</nav>
 	<article class="container mt-3">
+		<div class="row d-none d-sm-block">
+			<div class="col-12">
+				<div class="alert alert-warning">
+					<strong>Sale Now On! Get a 12 month subscription for the price of 6!</strong>
+                    <a href="">See here for details!</a>
+				</div>
+			</div>
+		</div>
 		<!-- callout-->
 		<div class="row">
 			<div class="col-12">
@@ -53,32 +62,51 @@
 			</div>
 			<div class="row">
 				<div class="col-12 col-md-6">
-					<blockquote class="blockquote">
-						<p>I've been introduced to more than 10 great international whiskeys I never knew about</p>
-						<p>- Jane Doe</p>
-					</blockquote>
-				</div>
-				<div class="col-12 col-md-6">
-					<blockquote class="blockquote">
-						<p>I haven't been sober for months!</p>
-						<p>- Jane Doe</p>
-					</blockquote>
-				</div>
-			</div>
+					<div class="media">
+						<div class="d-none d-sm-block">
+							<img src="images/girl-image.png" class="rounded-circle mr-3" height=100px width=100p alt="Girl Image">
+						</div>
+							<div class="media-body">
+								<blockquote class="blockquote">
+									<p>I've been introduced to more than 10 great international whiskeys I never knew
+										about
+									</p>
+									<p>- Jane Doe</p>
+								</blockquote>
+							</div>
+						</div>
+					</div>
+					<div class="col-12 col-md-6">
+						<div class="media">
+							<div class="d-none d-sm-block">
+								<img src="images/guy-image.png" class="rounded-circle mr-3" height=100px width=100p alt="Guy Image">
+						    </div>
+								<div class="media-body">
+									<blockquote class="blockquote">
+										<p>I haven't been sober for months!</p>
+										<p>- Jane Doe</p>
+									</blockquote>
+								</div>
+							</div>
+						</div>
+					</div>
 		</section>
 		</div>
 		<hr>
+		<!--quotes-->
 
+		<!--features-->
 		<section class="features">
 			<div class="row">
 				<div class="col-12 my-5"></div>
-				    <h2 class="text-uppercase">Features</h2>
-			    </div>
+				<h2 class="text-uppercase">Features</h2>
+			</div>
 			</div>
 			<div class="row">
 				<div class="col-12 col-md-6 col-lg-4">
 					<div class="feature">
-						<h3>Feature 1</h3>
+						<h3><i class="fas fa-gift d-none d-sm-block"></i> Feature 1
+							<span class="badge badge-success">New!</span></h3>
 						<p>Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Donec sollicitudin molestie
 							malesuada.
 						</p>
@@ -87,7 +115,7 @@
 				</div>
 				<div class="col-12 col-md-6 col-lg-4">
 					<div class="feature">
-						<h3>Feature 2</h3>
+						<h3><i class="far fa-credit-card d-none d-sm-block"></i> Feature 2</h3>
 						<p>Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Donec sollicitudin molestie
 							malesuada.
 						</p>
@@ -96,7 +124,7 @@
 				</div>
 				<div class="col-12 d-md-none d-lg-block col-lg-4">
 					<div class="feature">
-						<h3>Feature 3</h3>
+						<h3><i class="far fa-times-circle d-none d-sm-block"></i> Feature 3</h3>
 						<p>Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Donec sollicitudin molestie
 							malesuada.
 						</p>
@@ -105,8 +133,8 @@
 				</div>
 			</div>
 		</section>
+		<!--features-->
 
-		<!--quotes-->
 	</article>
 
 </body>
